--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "devDependencies": {
+    "typescript": "^4.9.5"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
+    "emailjs-com": "^3.2.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^3.0.1"
   },
   "browserslist": {
     "production": [
