--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@rive-app/react-canvas": "^4.13.3",
     "emailjs-com": "^3.2.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1"
+    "react-router-dom": "^6.25.1",
+    "react-scripts": "^5.0.1",
+    "rive-react": "^4.13.3"
   },
   "browserslist": {
     "production": [
