--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "rive-react": "^4.13.3",
     "sass": "^1.77.8",
     "split-text": "^1.0.0",
