--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
   },
   "include": [
     "src"
-, "public/NotFoundPage", "src/components/FrontPage"  ]
+, "public/NotFoundPagecomponents/FrontPage"  ]
 }
