--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
+  "homepage": "https://maximistic.github.io/Sri-portfolio",
   "name": "sri-portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "typescript": "^4.9.5"
   },
   "keywords": [],
